--- a/pages/betalen.html
+++ b/pages/betalen.html
@@ -14,11 +14,7 @@ title: Betalen
                 <article>
                     <h2>BETALINGSMETHODE</h2>
                     <div class="custom-controls-stacked">
-                        <label class="custom-control custom-radio">
-                            <input id="radioStacked3" name="radio-stacked" type="radio" class="custom-control-input">
-                            <span class="custom-control-indicator"></span>
-                            <span class="custom-control-description">Banctontact</span>
-                        </label>
+                      
                         <label class="custom-control custom-radio">
                             <input id="radioStacked4" name="radio-stacked" type="radio" class="custom-control-input">
                             <span class="custom-control-indicator"></span>
@@ -29,21 +25,13 @@ title: Betalen
                             <span class="custom-control-indicator"></span>
                             <span class="custom-control-description">Maestro</span>
                         </label>
-                        <label class="custom-control custom-radio">
-                            <input id="radioStacked4" name="radio-stacked" type="radio" class="custom-control-input">
-                            <span class="custom-control-indicator"></span>
-                            <span class="custom-control-description">Mastercard</span>
-                        </label>
+
                         <label class="custom-control custom-radio">
                             <input id="radioStacked4" name="radio-stacked" type="radio" class="custom-control-input">
                             <span class="custom-control-indicator"></span>
                             <span class="custom-control-description">Paypal</span>
                         </label>
-                        <label class="custom-control custom-radio">
-                            <input id="radioStacked4" name="radio-stacked" type="radio" class="custom-control-input">
-                            <span class="custom-control-indicator"></span>
-                            <span class="custom-control-description">American Express</span>
-                        </label>
+                    
                     </div>
                 </article>
                 <article>
@@ -61,7 +49,7 @@ title: Betalen
                             <div class="col-sm-7">
                                 <input  class="form-control" placeholder="mm/jj">
                             </div>
-                            <label for="inputEmail3" class="col-sm-5 col-form-label">Verificatiecode kaart<span class="sterretje">*</span></label>
+                            <label for="inputEmail3" class="col-sm-5 col-form-label">Verificatiecode<span class="sterretje">*</span></label>
                             <div class="col-sm-7">
                                     <input class="form-control">
                             </div>
@@ -82,7 +70,7 @@ title: Betalen
         </div>
         <div class="row justify-content-center">
                 <div class="col-10 col-md-10 col-lg-10 col-xl-10">
-                    <a class="btn btn-primary" href="bevestiging.html" role="button">Ik bevestig mijn betaling</a>
+                    <a class="btn btn-primary" href="bevestiging.html" role="button">IK BEVESTIG MIJN BETALING</a>
                 </div>
         </div>
     </div>
