--- a/pages/bevestiging.html
+++ b/pages/bevestiging.html
@@ -11,9 +11,9 @@ title: Bevestiging
         <div class="row justify-content-center">
             <div class="col-10 kader">
                 <article>
-                    <h2>Bedankt voor uw bestelling!</h2>
+                    <h2>BEDANKT VOOR UW BESTELLING!</h2>
                     <p>
-                       Wij gaan nu aan de slag met het nakijken van uw bestellen. <br>U mag van ons binnen de 24uur een bevestigingsmail ontvangen.
+                       Wij gaan nu aan de slag met het nakijken van uw bestelling. <br>U mag van ons binnen de 24uur een bevestigingsmail ontvangen.
                        <br>Is dit niet zo? Contacteer ons op 0032 471 04 01 27 of via mail, hello@umbrellady.be.
                     </p>
                 </article>
@@ -21,7 +21,7 @@ title: Bevestiging
         </div>
         <div class="row justify-content-center">
             <div class="col-10 col-md-10 col-lg-10 col-xl-10">
-                <a class="btn btn-primary" href="index.html" role="button">Terug naar de homepagina</a>
+                <a class="btn btn-primary" href="index.html" role="button">Homepagina</a>
             </div>
         </div>
     </div>
