--- a/pages/gegevens.html
+++ b/pages/gegevens.html
@@ -62,7 +62,7 @@ title: Gegevens
                             </label></label>
                             <div class="col-sm-7">
                                             <select id="inputState" class="form-control">
-                                                <option selected>Met hoeveel personen wilt u onder de paraplu?</option>
+                                                <option selected>selecteer het aantal personen</option>
                                                 <option>1</option>
                                                 <option>2</option>
                                                 <option>3</option>
@@ -76,7 +76,7 @@ title: Gegevens
                             </label></label>
                             <div class="col-sm-7">
                                             <select id="inputState" class="form-control">
-                                                <option selected>Naar waar gaan we?</option>
+                                                <option selected>selecteer de activiteit</option>
                                                 <option>winkel</option>
                                                 <option>sportactiviteit</option>
                                                 <option>school</option>
@@ -90,7 +90,7 @@ title: Gegevens
                             </label></label>
                             <div class="col-sm-7">
                                             <select id="inputState" class="form-control">
-                                                <option selected>aantal uur</option>
+                                                <option selected>selecteer het aantal uuraantal uur</option>
                                                 <option>30min</option>
                                                 <option>1uur</option>
                                                 <option>1,5uur</option>
@@ -117,7 +117,7 @@ title: Gegevens
         </div>
         <div class="row justify-content-center">
                 <div class="col-10 col-md-10 col-lg-10 col-xl-10">
-                    <a class="btn btn-primary" href="betalen.html" role="button">Betalen</a>
+                    <a class="btn btn-primary" href="betalen.html" role="button">BETALEN</a>
                 </div>
         </div>
     </div>
