--- a/pages/gegevens.html
+++ b/pages/gegevens.html
@@ -90,7 +90,7 @@ title: Gegevens
                             </label></label>
                             <div class="col-sm-7">
                                             <select id="inputState" class="form-control">
-                                                <option selected>selecteer het aantal uuraantal uur</option>
+                                                <option selected>selecteer het aantal uur</option>
                                                 <option>30min</option>
                                                 <option>1uur</option>
                                                 <option>1,5uur</option>
